# dota-2ui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TODOS.md  config.example.toml
.context/retros/: 2026-03-24-1.json
.github/workflows/: ci.yml
.gstack/deploy-reports/: 2026-03-24-pr1-deploy.md
docs/superpowers/plans/: 2026-03-24-dota-2ui.md
docs/superpowers/specs/: 2026-03-24-dota-2ui-design.md
src/: app.rs  cache.rs  config.rs  input.rs  lib.rs  main.rs  models.rs
src/api/: liquipedia.rs  mod.rs  pandascore.rs
src/ui/: broadcast.rs  dashboard.rs  match_detail.rs  mod.rs  settings.rs  tournament_browser.rs  tournament_detail.rs
src/ui/widgets/: bracket_column.rs  bracket_tree.rs  countdown.rs  keybind_bar.rs  match_card.rs  mod.rs
tests/: cache_test.rs  config_test.rs  models_test.rs
tests/api/: liquipedia_test.rs  pandascore_test.rs
