[package]
name = "dota-2ui"
version = "0.2.0"
edition = "2021"
description = "Dota 2 esports TUI dashboard — tournament fixtures, live matches, and countdowns"
license = "MIT"
repository = "https://github.com/OpenSauce/dota-2ui"

[features]
default = []
notifications = ["dep:notify-rust"]

[dependencies]
notify-rust = { version = "4", optional = true }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
open = "5"
regex = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "liquipedia_test"
path = "tests/api/liquipedia_test.rs"

[[test]]
name = "pandascore_test"
path = "tests/api/pandascore_test.rs"
